--- a/.github/release-please/backport/config.json
+++ b/.github/release-please/backport/config.json
@@ -14,7 +14,7 @@
     },
     "test-api": {
       "component": "test-api",
-      "release-type": "node",
+      "release-type": "node"
     }
   },
   "plugins": [
