--- a/.github/release-please/backport/config.json
+++ b/.github/release-please/backport/config.json
@@ -20,7 +20,7 @@
   "plugins": [
     {
       "type": "linked-versions",
-      "groupName": "test",
+      "groupname": "test",
       "components": ["test", "test-api"]
     }
   ]
