--- a/.github/release-please/backport/config.json
+++ b/.github/release-please/backport/config.json
@@ -5,6 +5,7 @@
   "group-pull-request-title-pattern": "chore: backport release ${version}",
   "prerelease-type": "backport",
   "prerelease": true,
+  "versioning": "prerelease",
   "skip-github-release": true,
   "packages": {
     ".": {
