fix: Test something

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -4,6 +4,9 @@ on:
   push:
     branches:
       - "main"
+      - "backport/*"
+      - "hotfix/*"
+      - "prerelease/*"
 
 concurrency:
   group: "${{ github.workflow }}-${{ github.ref }}"
@@ -23,8 +26,12 @@ jobs:
         id: release
         uses: googleapis/release-please-action@v4
         with:
-          config-file: .github/release-please/config.json
-          manifest-file: .github/release-please/manifest.json
+          config-file: ${{ github.ref_name == 'main'
+            && '.github/release-please/config.json'
+            || '.github/release-please/backport/config.json' }}
+          manifest-file: ${{ github.ref_name == 'main'
+            && '.github/release-please/manifest.json'
+            || '.github/release-please/backport/manifest.json' }}
 
       - name: Show output from release-please
         if: steps.release.outputs.release_created
