fix: hotfix-to-version-0.8.138

--- a/deployment.yml
+++ b/deployment.yml
@@ -5,5 +5,5 @@ metadata:
 spec:
     spec:
       containers:
-        - name: test
+        - name: test-test
           image: nahsilabs/test:0.8.138 # x-release-please-version
