--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -30,9 +30,7 @@ jobs:
           config-file: ${{ github.ref_name == 'main'
             && '.github/release-please/config.json'
             || '.github/release-please/backport/config.json' }}
-          manifest-file: ${{ github.ref_name == 'main'
-            && '.github/release-please/manifest.json'
-            || '.github/release-please/backport/manifest.json' }}
+          manifest-file: .github/release-please/manifest.json
 
       - name: Show output from release-please
         if: steps.release.outputs.release_created
