--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -38,14 +38,8 @@ jobs:
           RELEASE_PLEASE_OUTPUT: ${{ toJSON(steps.release.outputs) }}
         run: echo "${RELEASE_PLEASE_OUTPUT}" | jq
 
-  merge-to-main:
-    name: Merge release back to main branch
-    needs:
-      - release-please
-    if: github.ref_name == 'rc' && needs.release-please.outputs.release-created
-    uses: ./.github/workflows/fast-forward.yml
-    with:
-      source: ${{ needs.release-please.outputs.tag-name }}
-      target: "main"
-    secrets:
-      token: ${{ secrets.GITHUB_TOKEN }}
+      - name: Sync release back to main
+        if: steps.release.outputs.release_created
+        run: |
+          git cherry-pick -x "${{ steps.release.outputs['tag_name'] }}"
+          git push origin HEAD:main
