--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -46,10 +46,13 @@ jobs:
       - name: Checkout target branch
         uses: actions/checkout@v4
         with:
-          ref: ${{ needs.release-please.outputs.tag-name }}
+          ref: main
           fetch-depth: 0
 
       - name: Sync release back to main
         run: |
+          git config user.name "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
+          git fetch --tags origin "${{ needs.release-please.outputs.tag-name }}"
           git cherry-pick -x "${{ needs.release-please.outputs.tag-name }}"
           git push origin HEAD:main
