--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -49,10 +49,16 @@ jobs:
           ref: main
           fetch-depth: 0
 
-      - name: Sync release back to main
+      - name: Fast-forward main to release tag
         run: |
-          git config user.name "github-actions[bot]"
-          git config user.email "github-actions[bot]@users.noreply.github.com"
-          git fetch --tags origin "${{ needs.release-please.outputs.tag-name }}"
-          git cherry-pick -x "${{ needs.release-please.outputs.tag-name }}"
+          git fetch --no-tags origin "refs/tags/${{ needs.release-please.outputs.tag-name }}"
+
+          if git merge-base --is-ancestor HEAD FETCH_HEAD; then
+            echo "Fast-forward merge possible."
+          else
+            echo "Error: main has commits not in the release tag; cannot fast-forward."
+            exit 1
+          fi
+
+          git merge --ff-only FETCH_HEAD
           git push origin HEAD:main
