--- a/deployment.yml
+++ b/deployment.yml
@@ -2,6 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: test-test-test-test-test-test-test-test-test
+  namespace: test
 spec:
     spec:
       containers:
