--- a/.github/workflows/cherri.yml
+++ b/.github/workflows/cherri.yml
@@ -37,4 +37,4 @@ jobs:
           create-pr: rc
           since: ${{ github.event.inputs.since || '1' }}
           fail-on-conflict: "true"
-          token: ${{ secrets.TOKEN }}
+          github-token: ${{ secrets.TOKEN }}
